--- a/client/browser/wasm_exec.html
+++ b/client/browser/wasm_exec.html
@@ -32,6 +32,7 @@ license that can be found in the LICENSE file.
 			mod = result.module;
 			inst = result.instance;
 			document.getElementById("runButton").disabled = false;
+			run()
 		}).catch((err) => {
 			console.error(err);
 		});
